# GDM

./: .gitignore  CMakeLists.txt  README.md  code-coverage-results.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake.yml  pipeline.yml
examples/: CMakeLists.txt
examples/camera_scale_types/: CMakeLists.txt  main.cpp
examples/example_template/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/GDMBasics/: CMakeLists.txt
lib/GDMBasics/.scannerwork/: report-task.txt
lib/GDMBasics/include/: Animator.h  Camera.h  GDMBasics.h  InputActions.h  LocalCoords.h  Sprite.h  Trigger.h  TriggerShooter.h
lib/GDMBasics/src/: Animator.cpp  Camera.cpp  Element.cpp  Game.cpp  InputActions.cpp  LocalCoords.cpp  Room.cpp  Sprite.cpp  Trigger.cpp  TriggerManager.cpp  TriggerShooter.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test_Basics.cpp
tests/Basics/: CMakeLists.txt  test_Basics.cpp
tests/Camera/: CMakeLists.txt  test_Camera.cpp
tests/InputActions/: CMakeLists.txt  test_InputActions.cpp
tests/Sprite/: CMakeLists.txt  test_Sprite.cpp
tests/Triggers/: CMakeLists.txt  test_Triggers.cpp
